new update (add amazing options!)

--- a/portfolio.html
+++ b/portfolio.html
@@ -31,6 +31,7 @@
   -->
   <link rel="stylesheet" href="./assets/css/require.css">
   <link rel="stylesheet" href="./assets/css/pages/portfolio.css">
+  <link rel="stylesheet" href="./assets/css/components/scrollbar.css">
 
 </head>
 
@@ -290,7 +291,8 @@
 
       </ul>
 
-      <p class="text-center">&copy; 2024 ⋮ Mohadese Keshtkar</p>
+      <p class="text-center">&copy; 2024 ⋮ Developed by Mohadese Keshtkar ❤</p>
+
 
 
     </div>
