--- a/contact.html
+++ b/contact.html
@@ -1,166 +1,191 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <!-- 
+    <!-- 
     - primary meta tags
   -->
-  <title>Mohadese | Contact</title>
-  <meta name="title" content="Mohadese | Contact">
-  <meta name="description" content="This is a personal portfolio html template made by codewithsadee">
-  <link rel="icon" href="assets/images/girlbaner.png">
+    <title>Mohadese | Contact</title>
+    <meta name="title" content="Mohadese | Contact">
+    <meta name="description"
+      content="This is a personal portfolio html template made by codewithsadee">
+    <link rel="icon" href="assets/images/girlbaner.png">
 
-  <!-- 
+    <!-- 
     - favicon
   -->
-  <link rel="shortcut icon" href="./favicon.svg" type="image/svg+xml">
+    <link rel="shortcut icon" href="./favicon.svg" type="image/svg+xml">
 
-  <!-- 
+    <!-- 
     - google font link
   -->
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Jost:wght@400;500;600&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Jost:wght@400;500;600&display=swap"
+      rel="stylesheet">
 
-  <!-- 
+    <!-- 
     - custom css link
   -->
-  <link rel="stylesheet" href="./assets/css/require.css">
-  <link rel="stylesheet" href="./assets/css/pages/contact.css">
+    <link rel="stylesheet" href="./assets/css/require.css">
+    <link rel="stylesheet" href="./assets/css/pages/contact.css">
+    <link rel="stylesheet" href="./assets/css/components/scrollbar.css">
 
-</head>
+  </head>
 
-<body>
+  <body>
 
-  <!-- 
+    <!-- 
     - #PRELOADER
   -->
 
-  <div class="preloader" data-preloader>
-    <div class="preloader-circle"></div>
-  </div>
+    <div class="preloader" data-preloader>
+      <div class="preloader-circle"></div>
+    </div>
 
-
-
-  <!-- 
+    <!-- 
     - #HEADER
   -->
 
-  <header class="header" data-header>
-    <div class="container">
+    <header class="header" data-header>
+      <div class="container">
 
-      <a href="./index.html" class="logo">
-        <img src="./assets/images/logomomo (2).png" width="151" height="28" alt="Mohadese home">
-      </a>
+        <a href="./index.html" class="logo">
+          <img src="./assets/images/logomomo (2).png" width="151" height="28"
+            alt="Mohadese home">
+        </a>
 
-      <nav class="navbar" data-navbar>
-        <ul class="navbar-list">
+        <nav class="navbar" data-navbar>
+          <ul class="navbar-list">
 
-          <li class="navbar-item">
-            <a href="./index.html" class="label-lg navbar-link has-after">Home</a>
-          </li>
+            <li class="navbar-item">
+              <a href="./index.html"
+                class="label-lg navbar-link has-after">Home</a>
+            </li>
 
+            <li class="navbar-item">
+              <a href="./portfolio.html"
+                class="label-lg navbar-link has-after">Portfolio</a>
+            </li>
 
-          <li class="navbar-item">
-            <a href="./portfolio.html" class="label-lg navbar-link has-after">Portfolio</a>
-          </li>
+            <li class="navbar-item">
+              <a href="#"
+                class="label-lg navbar-link has-after active">Contact</a>
+            </li>
 
-          <li class="navbar-item">
-            <a href="#" class="label-lg navbar-link has-after active">Contact</a>
-          </li>
+          </ul>
+        </nav>
 
-        </ul>
-      </nav>
+        <a href="./contact.html" class="btn btn-primary">Contact Now</a>
 
-      <a href="./contact.html" class="btn btn-primary">Contact Now</a>
+        <button class="nav-toggle-btn" aria-label="menu" data-nav-toggler>
+          <ion-icon name="menu-outline" aria-hidden="true"></ion-icon>
+        </button>
 
-      <button class="nav-toggle-btn" aria-label="menu" data-nav-toggler>
-        <ion-icon name="menu-outline" aria-hidden="true"></ion-icon>
-      </button>
+      </div>
+    </header>
 
-    </div>
-  </header>
+    <main>
+      <article>
 
-
-
-  <main>
-    <article>
-
-      <!-- 
+        <!-- 
         - #CONTACT
       -->
 
-      <section class="section contact has-bg-image" aria-labelledby="contact-label"
-        style="background-image: url('./assets/images/contact-bg.png')">
-        <div class="container">
+        <section class="section contact has-bg-image"
+          aria-labelledby="contact-label"
+          style="background-image: url('./assets/images/contact-bg.png')">
+          <div class="container">
 
-          <form action="https://formspree.io/f/xblrybnn" method="post"  class="contact-form">
+            <form action="https://formspree.io/f/xblrybnn" method="post"
+              class="contact-form">
 
-            <h2 class="headline-sm" id="contact-label">Contact Me</h2>
+              <h2 class="headline-sm" id="contact-label">Contact Me</h2>
 
-            <p class="contact-text body-md">
-              I will be happy if you have any comments.
-            </p>
+              <p class="contact-text body-md">
+                I will be happy if you have any comments.
+              </p>
 
-            <div class="wrapper">
+              <div class="wrapper">
 
-              <div>
-                <label for="name" class="label">Your name</label>
+                <div>
+                  <label for="name" class="label">Your name</label>
 
-                <input type="text" name="name" id="name" placeholder="Name *" required class="input-field">
-              </div>
-
-              <div>
-                <label for="email" class="label">my Email </label>
-
-                <input type="email" name="email" id="email" value="mohadesekeshtkar4@gmail.com" placeholder="mohadesekeshtkar4@gmail.com" required class="input-field">
-              </div>
-
-            </div>
-
-            <label for="message" class="label">Your message </label>
-            <textarea name="message" id="message" placeholder="Your message *" required class="input-field"></textarea>
-
-            <button type="submit" id="btn" value="submit" class="btn btn-tertiary">Send Message</button>
-          </form>
-
-          <div class="contact-content">
-
-            <ul class="contact-list">
-
-              <li class="contact-item">
-
-                <div class="item-icon" style="background-color: hsl(177, 39%, 72%)">
-                  <ion-icon name="call" aria-hidden="true"></ion-icon>
+                  <input type="text" name="name" id="name" placeholder="Name *"
+                    required class="input-field">
                 </div>
 
                 <div>
-                  <p class="label-lg">Phone</p>
+                  <label for="email" class="label">my Email </label>
 
-                  <a href="tel:+09335354743" class="body-lg">+09335354743</a>
+                  <input type="email" name="email" id="email"
+                    value="mohadesekeshtkar4@gmail.com"
+                    placeholder="mohadesekeshtkar4@gmail.com" required
+                    class="input-field">
                 </div>
 
-              </li>
+              </div>
 
-              <li class="contact-item">
+              <label for="message" class="label">Your message </label>
+              <textarea name="message" id="message" placeholder="Your message *"
+                required class="input-field"></textarea>
 
-                <div class="item-icon" style="background-color: hsl(41, 99%, 64%)">
-                  <ion-icon name="mail" aria-hidden="true"></ion-icon>
-                </div>
+              <button type="submit" id="btn" value="submit"
+                class="btn btn-tertiary">Send Message</button>
+            </form>
 
-                <div>
-                  <p class="label-lg">Mail</p>
+            <div class="contact-content">
 
-                  <a href="tel:info@domainname.com" class="body-lg">mohadesekeshtkar4@gmail.com</a>
-                </div>
+              <ul class="contact-list">
 
-              </li>
+                <li class="contact-item">
 
-              <!-- <li class="contact-item">
+                  <div class="item-icon"
+                    style="background-color: hsl(177, 39%, 72%)">
+                    <ion-icon name="call" aria-hidden="true"></ion-icon>
+                  </div>
+
+                  <div>
+                    <p class="label-lg">Phone</p>
+
+                    <a href="tel:+09335354743" class="body-lg">+09335354743</a>
+                  </div>
+
+                </li>
+
+                <li class="contact-item">
+
+                  <div class="item-icon"
+                    style="background-color: hsl(41, 99%, 64%)">
+                    <ion-icon name="mail" aria-hidden="true"></ion-icon>
+                  </div>
+
+                  <div>
+                    <p class="label-lg">Mail</p>
+
+                    <a href="tel:info@domainname.com"
+                      class="body-lg">mohadesekeshtkar4@gmail.com</a>
+                  </div>
+
+                </li>
+
+                <li class="contact-item">
+
+                  <div style="text-align: center;">
+                    <p class="label-lg " style="margin-bottom: 15px;">My QR code
+                      for contact me!</p>
+                    <img style="width:250px;"
+                      src="assets/images/contact-QRcode.jpg" alt>
+                  </div>
+
+                </li>
+
+                <!-- <li class="contact-item">
 
                 <div class="item-icon" style="background-color: hsl(19, 97%, 85%)">
                   <ion-icon name="location" aria-hidden="true"></ion-icon>
@@ -177,82 +202,89 @@
 
               </li> -->
 
-            </ul>
+              </ul>
+
+            </div>
 
           </div>
+        </section>
 
-        </div>
-      </section>
+      </article>
+    </main>
 
-    </article>
-  </main>
-
-
-  <!-- 
+    <!-- 
     - #FOOTER
   -->
 
-  <footer class="footer">
-    <div class="container">
+    <footer class="footer">
+      <div class="container">
 
-      <ul class="social-list">
+        <ul class="social-list">
 
-        <!-- <li>
+          <!-- <li>
           <a href="#" class="social-link">
             <ion-icon name="logo-facebook"></ion-icon>
           </a>
         </li> -->
 
-        <!-- <li>
+          <!-- <li>
           <a href="#" class="social-link">
             <ion-icon name="logo-twitter"></ion-icon>
           </a>
         </li> -->
 
-        <li>
-          <a target="_blank" href="https://www.instagram.com/m0hadese.keshtkar/" class="social-link">
-            <ion-icon name="logo-instagram"  style="font-size: 30px;"></ion-icon>
-          </a>
-        </li>
+          <li>
+            <a target="_blank"
+              href="https://www.instagram.com/m0hadese.keshtkar/"
+              class="social-link">
+              <ion-icon name="logo-instagram"
+                style="font-size: 30px;"></ion-icon>
+            </a>
+          </li>
 
-        <li >
-          <a target="_blank" href="https://www.linkedin.com/in/mohadesekeshtkar2006/" class="social-link">
-            <ion-icon name="logo-linkedin" style="font-size: 30px;"></ion-icon>
-          </a>
-        </li>
+          <li>
+            <a target="_blank"
+              href="https://www.linkedin.com/in/mohadesekeshtkar2006/"
+              class="social-link">
+              <ion-icon name="logo-linkedin"
+                style="font-size: 30px;"></ion-icon>
+            </a>
+          </li>
 
-        <li>
-          <a target="_blank" href="https://github.com/KmohadeseK" class="social-link">
-            <ion-icon name="logo-github"  style="font-size: 30px;"></ion-icon>
-          </a>
-        </li>
+          <li>
+            <a target="_blank" href="https://github.com/KmohadeseK"
+              class="social-link">
+              <ion-icon name="logo-github" style="font-size: 30px;"></ion-icon>
+            </a>
+          </li>
 
-        <!-- <li>
+          <!-- <li>
           <a href="#" class="social-link">
             <ion-icon name="logo-pinterest"></ion-icon>
           </a>
         </li> -->
 
-      </ul>
+        </ul>
 
-      <p class="text-center">&copy; 2024 ⋮ Mohadese Keshtkar</p>
+        <p class="text-center">&copy; 2024 ⋮ Developed by Mohadese Keshtkar
+          ❤</p>
 
+      </div>
+    </footer>
 
-    </div>
-  </footer>
-    
-
-  <!-- 
+    <!-- 
     - custom js link
   -->
-  <script src="./assets/js/script.js"></script>
+    <script src="./assets/js/script.js"></script>
 
-  <!-- 
+    <!-- 
     - ionicon
   -->
-  <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
-  <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
-  
-</body>
+    <script type="module"
+      src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
+    <script nomodule
+      src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
+
+  </body>
 
 </html>
