--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
     <link rel="stylesheet" href="./assets/css/require.css">
     <link rel="stylesheet" href="./assets/css/main.css">
     <link rel="stylesheet" href="./assets/css/components/scrollbar.css">
+    <link rel="stylesheet" href="./assets/css/components/btn.css">
     <!-- 
     - preload images
   -->
@@ -43,102 +44,123 @@
   </head>
 
   <body>
-  
-        <!-- 
+
+    <!-- 
     - #PRELOADER
   -->
 
-        <div class="preloader" data-preloader>
-          <div class="preloader-circle"></div>
-        </div>
+    <div class="preloader" data-preloader>
+      <div class="preloader-circle"></div>
+    </div>
 
-        <!-- 
+    <!-- 
     - #HEADER
   -->
 
-        <header class="header" data-header>
-          <div class="container">
+    <header class="header" data-header>
+      <div class="container">
 
-            <a href="#" class="logo">
-              <img src="./assets/images/logomomo (2).png" width="151"
-                height="28" alt="Mohadese home">
-            </a>
+        <a href="#" class="logo">
+          <img src="./assets/images/logomomo (2).png" width="151"
+            height="28" alt="Mohadese home">
+        </a>
 
-            <nav class="navbar" data-navbar>
-              <ul class="navbar-list">
+        <nav class="navbar" data-navbar>
+          <ul class="navbar-list">
 
-                <li class="navbar-item">
-                  <a href="#"
-                    class="label-lg navbar-link has-after active">Home</a>
-                </li>
+            <li class="navbar-item">
+              <a href="#"
+                class="label-lg navbar-link has-after active">Home</a>
+            </li>
 
-                <li class="navbar-item">
-                  <a href="./portfolio.html"
-                    class="label-lg navbar-link has-after">Portfolio</a>
-                </li>
+            <li class="navbar-item">
+              <a href="./portfolio.html"
+                class="label-lg navbar-link has-after">Portfolio</a>
+            </li>
 
-                <li class="navbar-item">
-                  <a href="./contact.html"
-                    class="label-lg navbar-link has-after">Contact</a>
-                </li>
+            <li class="navbar-item">
+              <a href="./contact.html"
+                class="label-lg navbar-link has-after">Contact</a>
+            </li>
 
-              </ul>
-            </nav>
+          </ul>
+        </nav>
 
-            <a href="./contact.html" class="btn btn-primary">Contact Now</a>
+        <a href="./contact.html" class="btn btn-primary">Contact Now</a>
 
-            <button class="nav-toggle-btn" aria-label="menu" data-nav-toggler>
-              <ion-icon name="menu-outline" aria-hidden="true"></ion-icon>
-            </button>
+        <button class="nav-toggle-btn" aria-label="menu" data-nav-toggler>
+          <ion-icon name="menu-outline" aria-hidden="true"></ion-icon>
+        </button>
 
-          </div>
-        </header>
+      </div>
+    </header>
 
-        <main class="main-all">
-          <article>
+    <main class="main-all">
+      <article>
 
-            <!-- 
+        <!-- 
         - #HERO
       -->
 
-            <section class="section hero" aria-label="home">
-              <div class="container">
+        <section class="section hero" aria-label="home">
+          <div class="container">
 
-                <div class="hero-content">
+            <div class="hero-content">
 
-                  <p class="hero-subtitle">👋, My name is Mohadese</p>
+              <p class="hero-subtitle">👋, My name is Mohadese</p>
 
-                  <h1 class="headline-lg">I'm a Developer</h1>
+              <h1 class="headline-lg">I'm a Developer</h1>
 
-                  <p class="hero-text body-md">
-                    Based in Iran , Bushehr.
-                  </p>
+              <p class="hero-text body-md">
+                Based in Iran , Bushehr.
+              </p>
+        <div class="likeBtn">
+          <div class="comment-react">
+            <button>
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                width="22"
+                height="22"
+                viewBox="0 0 24 24"
+                fill="none">
+                <path
+                  d="M19.4626 3.99415C16.7809 2.34923 14.4404 3.01211 13.0344 4.06801C12.4578 4.50096 12.1696 4.71743 12 4.71743C11.8304 4.71743 11.5422 4.50096 10.9656 4.06801C9.55962 3.01211 7.21909 2.34923 4.53744 3.99415C1.01807 6.15294 0.221721 13.2749 8.33953 19.2834C9.88572 20.4278 10.6588 21 12 21C13.3412 21 14.1143 20.4278 15.6605 19.2834C23.7783 13.2749 22.9819 6.15294 19.4626 3.99415Z"
+                  stroke="#707277"
+                  stroke-width="2"
+                  stroke-linecap="round"
+                  fill="#707277"></path>
+              </svg>
+            </button>
 
-                </div>
+            <span>18</span>
+          </div>
+        </div>
 
-                <figure class="hero-banner">
-                  <img src="./assets/images/girlbaner.png" width="680"
-                    height="645"
-                    alt="Mohadese character" class="w-100">
-                </figure>
+            </div>
 
-              </div>
-            </section>
+            <figure class="hero-banner">
+              <img src="./assets/images/girlbaner.png" width="680"
+                height="645"
+                alt="Mohadese character" class="w-100">
+            </figure>
 
-            <!-- 
+          </div>
+        </section>
+
+        <!-- 
         - #CLIENT
       -->
 
-            <!-- <section class="client" aria-label="Trusted client">
+        <!-- <section class="client" aria-label="Trusted client">
         <div class="container" style="gap: 100px;display: flex;text-align: center;">
 
         </div>
       </section> -->
 
-            <!-- 
+        <!-- 
         - #ABOUT
       -->
-            <!-- 
+        <!-- 
       <section class="section about" aria-label="about me">
         <div class="container">
 
@@ -184,209 +206,209 @@
         </div>
       </section> -->
 
-            <!-- 
+        <!-- 
         - #SKILL
       -->
 
-            <section class="section skill" aria-labelledby="skill-label">
-              <div class="container">
+        <section class="section skill" aria-labelledby="skill-label">
+          <div class="container">
 
-                <div class="skill-content">
+            <div class="skill-content">
 
-                  <h2 class="section-title headline-md" id="skill-label">My
-                    Skills</h2>
+              <h2 class="section-title headline-md" id="skill-label">My
+                Skills</h2>
 
-                  <ul class="skill-list">
+              <ul class="skill-list">
 
-                    <li>
-                      <div class="card card-sm"
-                        style="background-color: hsl(177, 39%, 72%)">
+                <li>
+                  <div class="card card-sm"
+                    style="background-color: hsl(177, 39%, 72%)">
 
-                        <div class="card-media">
-                          <ion-icon name="logo-html5"></ion-icon>
-                        </div>
+                    <div class="card-media">
+                      <ion-icon name="logo-html5"></ion-icon>
+                    </div>
 
-                        <h2 class="card-title">HTML</h2>
+                    <h2 class="card-title">HTML</h2>
 
-                      </div>
-                    </li>
+                  </div>
+                </li>
 
-                    <li>
-                      <div class="card card-sm"
-                        style="background-color: hsl(11, 95%, 71%)">
+                <li>
+                  <div class="card card-sm"
+                    style="background-color: hsl(11, 95%, 71%)">
 
-                        <div class="card-media">
-                          <ion-icon name="logo-css3"></ion-icon>
-                        </div>
+                    <div class="card-media">
+                      <ion-icon name="logo-css3"></ion-icon>
+                    </div>
 
-                        <h2 class="card-title">CSS</h2>
+                    <h2 class="card-title">CSS</h2>
 
-                      </div>
-                    </li>
+                  </div>
+                </li>
 
-                    <li>
-                      <div class="card card-sm"
-                        style="background-color: hsl(41, 99%, 64%)">
+                <li>
+                  <div class="card card-sm"
+                    style="background-color: hsl(41, 99%, 64%)">
 
-                        <div class="card-media">
-                          <svg style="width: 33px;"
-                            xmlns="http://www.w3.org/2000/svg" fill="none"
-                            viewBox="0 0 24 24" stroke-width="1.5"
-                            stroke="currentColor" class="size-6">
-                            <path stroke-linecap="round" stroke-linejoin="round"
-                              d="M17.25 6.75 22.5 12l-5.25 5.25m-10.5 0L1.5 12l5.25-5.25m7.5-3-4.5 16.5" />
-                          </svg>
+                    <div class="card-media">
+                      <svg style="width: 33px;"
+                        xmlns="http://www.w3.org/2000/svg" fill="none"
+                        viewBox="0 0 24 24" stroke-width="1.5"
+                        stroke="currentColor" class="size-6">
+                        <path stroke-linecap="round" stroke-linejoin="round"
+                          d="M17.25 6.75 22.5 12l-5.25 5.25m-10.5 0L1.5 12l5.25-5.25m7.5-3-4.5 16.5" />
+                      </svg>
 
-                        </div>
+                    </div>
 
-                        <h2 class="card-title">JavaScript</h2>
+                    <h2 class="card-title">JavaScript</h2>
 
-                      </div>
-                    </li>
+                  </div>
+                </li>
 
-                    <li>
-                      <div class="card card-sm"
-                        style="background-color: hsl(19, 97%, 85%)">
+                <li>
+                  <div class="card card-sm"
+                    style="background-color: hsl(19, 97%, 85%)">
 
-                        <div class="card-media">
-                          <ion-icon name="logo-react"></ion-icon>
-                        </div>
+                    <div class="card-media">
+                      <ion-icon name="logo-react"></ion-icon>
+                    </div>
 
-                        <h2 class="card-title">React JS</h2>
+                    <h2 class="card-title">React JS</h2>
 
-                      </div>
-                    </li>
+                  </div>
+                </li>
 
-                    <li>
-                      <div class="card card-sm"
-                        style="background-color: hsl(263, 100%, 85%)">
+                <li>
+                  <div class="card card-sm"
+                    style="background-color: hsl(263, 100%, 85%)">
 
-                        <div class="card-media">
-                          <svg style="width: 33px; margin-top:22px;"
-                            xmlns="http://www.w3.org/2000/svg" fill="none"
-                            viewBox="0 0 24 24" stroke-width="1.5"
-                            stroke="currentColor" class="size-6">
-                            <path stroke-linecap="round" stroke-linejoin="round"
-                              d="m21 7.5-9-5.25L3 7.5m18 0-9 5.25m9-5.25v9l-9 5.25M3 7.5l9 5.25M3 7.5v9l9 5.25m0-9v9" />
-                          </svg>
+                    <div class="card-media">
+                      <svg style="width: 33px; margin-top:22px;"
+                        xmlns="http://www.w3.org/2000/svg" fill="none"
+                        viewBox="0 0 24 24" stroke-width="1.5"
+                        stroke="currentColor" class="size-6">
+                        <path stroke-linecap="round" stroke-linejoin="round"
+                          d="m21 7.5-9-5.25L3 7.5m18 0-9 5.25m9-5.25v9l-9 5.25M3 7.5l9 5.25M3 7.5v9l9 5.25m0-9v9" />
+                      </svg>
 
-                          <ion-icon></ion-icon>
-                        </div>
+                      <ion-icon></ion-icon>
+                    </div>
 
-                        <h2 class="card-title">Bootstrap</h2>
+                    <h2 class="card-title">Bootstrap</h2>
 
-                      </div>
-                    </li>
+                  </div>
+                </li>
 
-                    <li>
-                      <div class="card card-sm"
-                        style="background-color: hsl(312, 92%, 85%)">
+                <li>
+                  <div class="card card-sm"
+                    style="background-color: hsl(312, 92%, 85%)">
 
-                        <div class="card-media">
-                          <svg style="width: 33px; margin-top:22px;"
-                            xmlns="http://www.w3.org/2000/svg" fill="none"
-                            viewBox="0 0 24 24" stroke-width="1.5"
-                            stroke="currentColor" class="size-6">
-                            <path stroke-linecap="round" stroke-linejoin="round"
-                              d="M2.036 12.322a1.012 1.012 0 0 1 0-.639C3.423 7.51 7.36 4.5 12 4.5c4.638 0 8.573 3.007 9.963 7.178.07.207.07.431 0 .639C20.577 16.49 16.64 19.5 12 19.5c-4.638 0-8.573-3.007-9.963-7.178Z" />
-                            <path stroke-linecap="round" stroke-linejoin="round"
-                              d="M15 12a3 3 0 1 1-6 0 3 3 0 0 1 6 0Z" />
-                          </svg>
+                    <div class="card-media">
+                      <svg style="width: 33px; margin-top:22px;"
+                        xmlns="http://www.w3.org/2000/svg" fill="none"
+                        viewBox="0 0 24 24" stroke-width="1.5"
+                        stroke="currentColor" class="size-6">
+                        <path stroke-linecap="round" stroke-linejoin="round"
+                          d="M2.036 12.322a1.012 1.012 0 0 1 0-.639C3.423 7.51 7.36 4.5 12 4.5c4.638 0 8.573 3.007 9.963 7.178.07.207.07.431 0 .639C20.577 16.49 16.64 19.5 12 19.5c-4.638 0-8.573-3.007-9.963-7.178Z" />
+                        <path stroke-linecap="round" stroke-linejoin="round"
+                          d="M15 12a3 3 0 1 1-6 0 3 3 0 0 1 6 0Z" />
+                      </svg>
 
-                          <ion-icon></ion-icon>
-                        </div>
+                      <ion-icon></ion-icon>
+                    </div>
 
-                        <h2 class="card-title">SASS</h2>
+                    <h2 class="card-title">SASS</h2>
 
-                      </div>
-                    </li>
+                  </div>
+                </li>
 
-                  </ul>
+              </ul>
 
-                </div>
+            </div>
 
-                <figure class="skill-banner">
-                  <img style="width: 500px;" src="./assets/images/charts.png"
-                    width="581" height="657" loading="lazy"
-                    alt="colorfully chart" class="w-100">
-                </figure>
-              </div>
-            </section>
+            <figure class="skill-banner">
+              <img style="width: 500px;" src="./assets/images/charts.png"
+                width="581" height="657" loading="lazy"
+                alt="colorfully chart" class="w-100">
+            </figure>
+          </div>
+        </section>
 
-            <!-- 
+        <!-- 
     - #FOOTER
   -->
 
-            <footer class="footer">
-              <div class="container">
+        <footer class="footer">
+          <div class="container">
 
-                <ul class="social-list">
+            <ul class="social-list">
 
-                  <!-- <li>
+              <!-- <li>
           <a href="#" class="social-link">
             <ion-icon name="logo-facebook"></ion-icon>
           </a>
         </li> -->
 
-                  <!-- <li>
+              <!-- <li>
           <a href="#" class="social-link">
             <ion-icon name="logo-twitter"></ion-icon>
           </a>
         </li> -->
 
-                  <li>
-                    <a target="_blank"
-                      href="https://www.instagram.com/m0hadese.keshtkar/"
-                      class="social-link">
-                      <ion-icon name="logo-instagram"
-                        style="font-size: 30px;"></ion-icon>
-                    </a>
-                  </li>
+              <li>
+                <a target="_blank"
+                  href="https://www.instagram.com/m0hadese.keshtkar/"
+                  class="social-link">
+                  <ion-icon name="logo-instagram"
+                    style="font-size: 30px;"></ion-icon>
+                </a>
+              </li>
 
-                  <li>
-                    <a target="_blank"
-                      href="https://www.linkedin.com/in/mohadesekeshtkar2006/"
-                      class="social-link">
-                      <ion-icon name="logo-linkedin"
-                        style="font-size: 30px;"></ion-icon>
-                    </a>
-                  </li>
+              <li>
+                <a target="_blank"
+                  href="https://www.linkedin.com/in/mohadesekeshtkar2006/"
+                  class="social-link">
+                  <ion-icon name="logo-linkedin"
+                    style="font-size: 30px;"></ion-icon>
+                </a>
+              </li>
 
-                  <li>
-                    <a target="_blank" href="https://github.com/KmohadeseK"
-                      class="social-link">
-                      <ion-icon name="logo-github"
-                        style="font-size: 30px;"></ion-icon>
-                    </a>
-                  </li>
+              <li>
+                <a target="_blank" href="https://github.com/KmohadeseK"
+                  class="social-link">
+                  <ion-icon name="logo-github"
+                    style="font-size: 30px;"></ion-icon>
+                </a>
+              </li>
 
-                  <!-- <li>
+              <!-- <li>
           <a href="#" class="social-link">
             <ion-icon name="logo-pinterest"></ion-icon>
           </a>
         </li> -->
 
-                </ul>
+            </ul>
 
-                <p class="text-center">&copy; 2024 ⋮ Developed by Mohadese
-                  Keshtkar ❤</p>
+            <p class="text-center">&copy; 2024 ⋮ Developed by Mohadese
+              Keshtkar ❤</p>
 
-              </div>
-            </footer>
+          </div>
+        </footer>
 
-            <!-- 
+        <!-- 
     - custom js link
   -->
-            <script src="./assets/js/script.js"></script>
+        <script src="./assets/js/script.js"></script>
 
-            <!-- 
+        <!-- 
     - ionicon
   -->
-            <script type="module"
-              src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
-            <script nomodule
-              src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
+        <script type="module"
+          src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
+        <script nomodule
+          src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
 
-          </body>
+      </body>
 
-        </html>
+    </html>
