--- a/index.html
+++ b/index.html
@@ -389,8 +389,7 @@
 
             </ul>
 
-            <p class="text-center">&copy; 2024 ⋮ Developed by Mohadese
-              Keshtkar ❤</p>
+            <p class="text-center">&copy; 2024 ⋮ Developed by Mohadese Keshtkar</p>
 
           </div>
         </footer>
