--- a/index.html
+++ b/index.html
@@ -78,14 +78,14 @@
             </li>
 
             <li class="navbar-item">
-              <a href="./contact.html"
+              <a href="./cc.html"
                 class="label-lg navbar-link has-after">Contact</a>
             </li>
 
           </ul>
         </nav>
 
-        <a href="./contact.html" class="btn btn-primary">Contact Now</a>
+        <a href="./cc.html" class="btn btn-primary">Contact Now</a>
 
         <button class="nav-toggle-btn" aria-label="menu" data-nav-toggler>
           <ion-icon name="menu-outline" aria-hidden="true"></ion-icon>
