--- a/index.html
+++ b/index.html
@@ -106,34 +106,17 @@
 
             <div class="hero-content">
 
-              <p class="hero-subtitle">👋, My name is Mohadese</p>
-
-              <h1 class="headline-lg">I'm a Developer</h1>
+              <p class="hero-subtitle">Hi, My name is Mohadese❤</p>
+              <p class="hero-text body-md">
+               I'm 19 years old.
+              </p>
+              <h1 class="headline-lg">Front-end developer
+              </h1>
 
               <p class="hero-text body-md">
                 Based in Iran , Bushehr.
               </p>
-              <div class="likeBtn">
-                <div class="comment-react">
-                  <button>
-                    <svg
-                      xmlns="http://www.w3.org/2000/svg"
-                      width="22"
-                      height="22"
-                      viewBox="0 0 24 24"
-                      fill="none">
-                      <path
-                        d="M19.4626 3.99415C16.7809 2.34923 14.4404 3.01211 13.0344 4.06801C12.4578 4.50096 12.1696 4.71743 12 4.71743C11.8304 4.71743 11.5422 4.50096 10.9656 4.06801C9.55962 3.01211 7.21909 2.34923 4.53744 3.99415C1.01807 6.15294 0.221721 13.2749 8.33953 19.2834C9.88572 20.4278 10.6588 21 12 21C13.3412 21 14.1143 20.4278 15.6605 19.2834C23.7783 13.2749 22.9819 6.15294 19.4626 3.99415Z"
-                        stroke="#707277"
-                        stroke-width="2"
-                        stroke-linecap="round"
-                        fill="#707277"></path>
-                    </svg>
-                  </button>
-
-                  <span>18</span>
-                </div>
-              </div>
+           
 
             </div>
 
@@ -222,11 +205,6 @@
                 <li>
                   <div class="card card-sm"
                     style="background-color: hsl(177, 39%, 72%)">
-
-                    <div class="card-media">
-                      <ion-icon name="logo-html5"></ion-icon>
-                    </div>
-
                     <h2 class="card-title">HTML</h2>
 
                   </div>
@@ -235,11 +213,6 @@
                 <li>
                   <div class="card card-sm"
                     style="background-color: hsl(11, 95%, 71%)">
-
-                    <div class="card-media">
-                      <ion-icon name="logo-css3"></ion-icon>
-                    </div>
-
                     <h2 class="card-title">CSS</h2>
 
                   </div>
@@ -247,19 +220,7 @@
 
                 <li>
                   <div class="card card-sm"
-                    style="background-color: hsl(41, 99%, 64%)">
-
-                    <div class="card-media">
-                      <svg style="width: 33px;"
-                        xmlns="http://www.w3.org/2000/svg" fill="none"
-                        viewBox="0 0 24 24" stroke-width="1.5"
-                        stroke="currentColor" class="size-6">
-                        <path stroke-linecap="round" stroke-linejoin="round"
-                          d="M17.25 6.75 22.5 12l-5.25 5.25m-10.5 0L1.5 12l5.25-5.25m7.5-3-4.5 16.5" />
-                      </svg>
-
-                    </div>
-
+                    style="background-color: hsl(41, 99%, 64%)">              
                     <h2 class="card-title">JavaScript</h2>
 
                   </div>
@@ -268,32 +229,13 @@
                 <li>
                   <div class="card card-sm"
                     style="background-color: hsl(19, 97%, 85%)">
-
-                    <div class="card-media">
-                      <ion-icon name="logo-react"></ion-icon>
-                    </div>
-
                     <h2 class="card-title">React JS</h2>
-
                   </div>
                 </li>
 
                 <li>
                   <div class="card card-sm"
                     style="background-color: hsl(263, 100%, 85%)">
-
-                    <div class="card-media">
-                      <svg style="width: 33px; margin-top:22px;"
-                        xmlns="http://www.w3.org/2000/svg" fill="none"
-                        viewBox="0 0 24 24" stroke-width="1.5"
-                        stroke="currentColor" class="size-6">
-                        <path stroke-linecap="round" stroke-linejoin="round"
-                          d="m21 7.5-9-5.25L3 7.5m18 0-9 5.25m9-5.25v9l-9 5.25M3 7.5l9 5.25M3 7.5v9l9 5.25m0-9v9" />
-                      </svg>
-
-                      <ion-icon></ion-icon>
-                    </div>
-
                     <h2 class="card-title">Bootstrap</h2>
 
                   </div>
@@ -302,22 +244,15 @@
                 <li>
                   <div class="card card-sm"
                     style="background-color: hsl(312, 92%, 85%)">
-
-                    <div class="card-media">
-                      <svg style="width: 33px; margin-top:22px;"
-                        xmlns="http://www.w3.org/2000/svg" fill="none"
-                        viewBox="0 0 24 24" stroke-width="1.5"
-                        stroke="currentColor" class="size-6">
-                        <path stroke-linecap="round" stroke-linejoin="round"
-                          d="M2.036 12.322a1.012 1.012 0 0 1 0-.639C3.423 7.51 7.36 4.5 12 4.5c4.638 0 8.573 3.007 9.963 7.178.07.207.07.431 0 .639C20.577 16.49 16.64 19.5 12 19.5c-4.638 0-8.573-3.007-9.963-7.178Z" />
-                        <path stroke-linecap="round" stroke-linejoin="round"
-                          d="M15 12a3 3 0 1 1-6 0 3 3 0 0 1 6 0Z" />
-                      </svg>
-
-                      <ion-icon></ion-icon>
-                    </div>
-
                     <h2 class="card-title">SASS</h2>
+
+                  </div>
+                </li>
+                
+                <li>
+                  <div class="card card-sm"
+                    style="background-color: hsl(207, 98%, 75%)">
+                    <h2 class="card-title">WordPress</h2>
 
                   </div>
                 </li>
